--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 							<h3>I'm Naman sharma and <span class="arlo_tm_animation_text_word"></span></h3>
 						</div>
 						<div class="text">
-							<p>Hi! My name is <span>Naman sharma</span>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.</p>
+							<p>Hi! My name is <span>Naman sharma</span>. I am a Web Developer, and I'm very passionate and dedicated to my work.  
+							Looking forward to expand my knowledge by implementing it in various industrial projects.</p>
 						</div>
 						<div class="about_short_contact_wrap">
 							<ul>
@@ -208,7 +209,7 @@
 								</li>	
 								<li>
 									<img class="svg" src="img/svg/message-3.svg" alt="" />
-									<span><label>Mail:</label> <a href="mailto:example@gmail.com">mymail&#64;gmail.com</a></span>
+									<span><label>Mail:</label> <a href="mailto:Info.namansharma001@gmail.com">Info.namansharma001&#64;gmail.com</a></span>
 								</li>
 								<li>
 									<img class="svg" src="img/svg/call-2.svg" alt="" />
@@ -217,7 +218,7 @@
 							</ul>
 						</div>
 						<div class="arlo_tm_button">
-							<a href="img/resume/Me_resume.png" download><span>Download CV</span></a>
+							<a href="img/resume/Me_Resume3.pdf" download><span>Download CV</span></a>
 						</div>
 					</div>
 				</div>
@@ -268,42 +269,42 @@
 							<ul>
 							<li class="wow fadeInLeft" data-wow-duration="1.5s">
 								<div class="inner">
-									<img class="svg" src="img/svg/photoshop.svg" alt="" />
+									<img class="svg" src="img/svg/html-5.svg" alt="" />
 									<h3>HTML5</h3>
 									<p>Web design is a similar process of creation, with the intention of presenting...</p>
 								</div>
 							</li>
 							<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.2s">
 								<div class="inner">
-									<img class="svg" src="img/svg/ai.svg" alt="" />
+									<img class="svg" src="img/svg/css3.svg" alt="" />
 									<h3>CSS3</h3>
 									<p>Web design is a similar process of creation, with the intention of presenting...</p>
 								</div>
 							</li>
 							<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 								<div class="inner">
-									<img class="svg" src="img/svg/share.svg" alt="" />
+									<img class="svg" src="img/svg/javascript.svg" alt="" />
 									<h3>Javascript</h3>
 									<p>Web design is a similar process of creation, with the intention of presenting...</p>
 								</div>
 							</li>
 							<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 								<div class="inner">
-									<img class="svg" src="img/svg/share.svg" alt="" />
+									<img class="svg" src="img/svg/python.svg" alt="" />
 									<h3>Python</h3>
 									<p>Web design is a similar process of creation, with the intention of presenting...</p>
 								</div>
 							</li>
 							<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 								<div class="inner">
-									<img class="svg" src="img/svg/share.svg" alt="" />
+									<img class="svg" src="img/svg/django2.svg" alt="" />
 									<h3>Django</h3>
 									<p>Web design is a similar process of creation, with the intention of presenting...</p>
 								</div>
 							</li>
 							<li class="wow fadeInLeft" data-wow-duration="1.5s" data-wow-delay="0.4s">
 								<div class="inner">
-									<img class="svg" src="img/svg/share.svg" alt="" />
+									<img class="svg" src="img/svg/bootstrap.svg" alt="" />
 									<h3>Bootstrap</h3>
 									<p>Web design is a similar process of creation, with the intention of presenting...</p>
 								</div>
@@ -342,9 +343,9 @@
 									<h3 class="temp">Google Hashcode</h3>	
 									<div class="inner">
 										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Sweet Fruit" data-category="Hackathons">
-											<a class="zoom" href="img/portfolio/1.jpg">
+											<a class="zoom" href="img/portfolio/hashcode.png">
 												<img src="img/ratios/ratio-1-1.jpg" alt="" />
-												<div class="main_image" data-img-url="img/portfolio/1.jpg"></div>
+												<div class="main_image" data-img-url="img/portfolio/hashcode.png"></div>
 											</a>
 										</div>
 									</div>
@@ -352,10 +353,10 @@
 								<li class="branding">
 									<h3>Face recognition using python</h3>
 									<div class="inner">
-										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Good Present" data-category="Branding">
-											<a class="popup-youtube" href="https://www.youtube.com/watch?v=ICr_bOuM9Zo">
+										<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Good Present" data-category="Hackathons">
+											<a class="zoom" href="img/portfolio/Guvi.png">
 												<img src="img/ratios/ratio-1-1.jpg" alt="" />
-												<div class="main_image" data-img-url="img/portfolio/2.jpg"></div>
+												<div class="main_image" data-img-url="img/portfolio/Guvi.png"></div>
 											</a>
 										</div>
 									</div>
