--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 							</ul>
 						</div>
 						<div class="arlo_tm_button">
-							<a href="img/resume/Me_Resume3.pdf" download><span>Download CV</span></a>
+							<a href="img/resume/Me_Resume3.pdf" target="_blank" ><span>My CV</span></a>
 						</div>
 					</div>
 				</div>
