--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			</div>
 			<div class="content">
 				<div class="image_wrap">
-					<div class="main" data-img-url="img/about/upload_temp_new.jpg"></div>
+					<div class="main" data-img-url="img/about/me.jpg"></div>
 				</div>
 				<div class="name_holder">
 					<h3>Naman <span>Sharma</span></h3>
